overlays/dev/probing-api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: interop-be-probing-api
  name: interop-be-probing-api
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: interop-be-probing-api
status:
  loadBalancer: {}
