overlays/dev/probing-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interop-be-probing-api
  annotations:
      alb.ingress.kubernetes.io/load-balancer-name: interop-probing-alb-dev
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /eservices
        pathType: Prefix
        backend:
          service:
            name: interop-be-probing-api
            port:
               number: 80
      - path: /producers
        pathType: Prefix
        backend:
          service:
            name: interop-be-probing-api
            port:
               number: 80
